Refactor running services provider