@@ -1,10 +1,9 @@
 package org.acme;
 
-import java.util.ArrayList;
-import java.util.HashMap;
+import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
+import java.util.UUID;
 
 import javax.enterprise.context.ApplicationScoped;
 
@@ -14,35 +13,32 @@ import io.quarkus.arc.Lock;
 @ApplicationScoped
 public class RunningServicesProviderImpl implements RunningServicesProvider {
 
-    private final Map<String, List<Integer>> services = new HashMap<>();
+    private final Map<UUID, ServiceExecution> services = new LinkedHashMap<>();
 
     @Override
     public void executionStarted(String service, int ranking) {
-        List<Integer> rankings = services.get(service);
-        if (rankings == null) {
-            rankings = new ArrayList<>();
-            services.put(service, rankings);
-        }
-        rankings.add(ranking);
+        UUID id = UUID.randomUUID();
+        services.put(id, new ServiceExecution(service, ranking));
     }
 
     @Override
     public void executionFinished(String service, int ranking) {
-        List<Integer> rankings = services.get(service);
-        if (rankings != null) {
-            rankings.remove(Integer.valueOf(ranking));
-            if (rankings.isEmpty()) {
-                services.remove(service);
-            }
-        }
+        services.entrySet()
+                .removeIf(entry -> {
+                    var execution = entry.getValue();
+                    return execution.serviceName.equals(service) && execution.ranking == ranking;
+                });
     }
 
     @Override
     public List<Integer> getRankingsForRunningSerices() {
         return services.values()
                 .stream()
-                .flatMap(List::stream)
-                .collect(Collectors.toList());
+                .map(ServiceExecution::ranking)
+                .toList();
+    }
+
+    private record ServiceExecution(String serviceName, int ranking) {
     }
 
 }
